--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
-    <script src="https://unpkg.com/stimulus@1.1.1/dist/stimulus.umd.js" defer></script>
 
     <title>Stimulus Timeago</title>
 
     <script type="module" defer>
+      import { Application } from 'stimulus'
       import Timeago from './src/index.js'
 
-      const application = Stimulus.Application.start()
+      const application = Application.start()
       application.register('timeago', Timeago)
     </script>
   </head>
