--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script type="module" defer>
       import { Application } from 'stimulus'
-      import Timeago from './src/index.js'
+      import Timeago from './src/index'
 
       const application = Application.start()
       application.register('timeago', Timeago)
