Updating to Stimulus 3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Stimulus Timeago</title>
 
     <script type="module" defer>
-      import { Application } from 'stimulus'
+      import { Application } from '@hotwired/stimulus'
       import Timeago from './src/index'
 
       const application = Application.start()
